Add username sign up validation notice

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,5 +1,5 @@
 <h2>Sign up</h2>
-
+<p class="error-text"><%= error %></p>
 <form action="/signup" method="post">
     <div>
       <label for="username">Username:</label>
