--- a/public/style.css
+++ b/public/style.css
@@ -135,3 +135,8 @@ form input[type=text], form input[type=password] {
 .creator .message {
   clear: both;
 }
+
+.error-text {
+  color: red;
+  font-size: 14px;
+}
